github_data_collector/src/data/issue_comment/kolyvan_kxmovie.txt
你好，我的场景是：iOS需要播放加密的m3u8文件，后台把每个ts地址进行加密，客户端进行解密后播放，请问支持吗？现在解密每个ts已实现，该怎么播放？希望得到您的帮助。
use cocoapods manage ffmpeg 
add  filter, but inoperative.
```
- (kxMovieError) openVideoStream: (NSInteger) videoStream
{    
    // get a pointer to the codec context for the video stream
    AVCodecContext *codecCtx = _formatCtx->streams[videoStream]->codec;
    // find the decoder for the video stream
    AVCodec *codec = avcodec_find_decoder(codecCtx->codec_id);
    [_Tool setupFilters:@"crop=1/3*in_w:1/3*in_h" videoCodecCtx:codecCtx];
```


参照网上说明编译成功
播放本地部分文件出现声音卡顿，修改- (NSArray *) decodeFrames: (CGFloat) minDuration方法，
//if (_videoStream == -1) {
                            
                            _position = frame.position;
                            decodedDuration += frame.duration;
                            if (decodedDuration > minDuration && ((_videoStream == -1) || (decodedDuration >= decodedVideoDuration) ))
                                finished = YES;
                        //}
声音不卡了，但是出现视频缓冲现象。
从io监视来看，本地文件io分布极度不均匀，经常是0，偶尔突发2M/s读写
内存也是忽高忽低，但是似乎没溢出
**** Build failed ********
/Users/bigfish/test/kxmovie/Rakefile:8:in `system_or_exit'
/Users/bigfish/test/kxmovie/Rakefile:159:in `buildArch'
/Users/bigfish/test/kxmovie/Rakefile:207:in `block in <top (required)>'
Tasks: TOP => default => build_ffmpeg => build
hello. rake failed and i got this mess, plz help 
```
AS	libavcodec/aarch64/fft_neon.o
<stdin>:369:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:369:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:370:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:370:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:394:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:394:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:395:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:395:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:419:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:419:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:420:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:420:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:444:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:444:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:445:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:445:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:469:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:469:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:470:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:470:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:494:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:494:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:495:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:495:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:519:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:519:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:520:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:520:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:544:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:544:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:545:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:545:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:569:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:569:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:570:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:570:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:594:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:594:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:595:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:595:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:619:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:619:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:620:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:620:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:644:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:644:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:645:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:645:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:662:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:662:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:663:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:663:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:669:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:669:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:670:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:670:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:676:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:676:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:677:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:677:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:684:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:684:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:685:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:685:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:691:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:691:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:692:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:692:5: error: invalid operand
 add, , @PAGEOFF
    ^
<stdin>:697:6: error: unknown token in expression
 adrp, @PAGE
     ^
<stdin>:697:6: error: invalid operand
 adrp, @PAGE
     ^
<stdin>:698:5: error: unknown token in expression
 add, , @PAGEOFF
    ^
<stdin>:698:5: error: invalid operand
 add, , @PAGEOFF
    ^
make: *** [libavcodec/aarch64/fft_neon.o] Error 1
rake aborted!
******** Build failed ********
/Users/macos/kxmovie/Rakefile:8:in `system_or_exit'
/Users/macos/kxmovie/Rakefile:160:in `buildArch'
/Users/macos/kxmovie/Rakefile:217:in `block in <top (required)>'
Tasks: TOP => default => build_ffmpeg => build_ffmpeg_arm64
(See full trace by running task with --trace)
```

Even basic customizing would be helpful - Thanks
....................................
